--- a/.github/workflows/build-openapi.yml
+++ b/.github/workflows/build-openapi.yml
@@ -22,6 +22,8 @@ jobs:
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
+            git config --global user.name "Codegen"
+            git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git commit -S -m "Build OpenAPI from TypeSpec"
             git push origin HEAD:${{ github.head_ref }}
           fi
