--- a/.github/workflows/build-openapi.yml
+++ b/.github/workflows/build-openapi.yml
@@ -24,8 +24,9 @@ jobs:
             echo "No changes to commit."
           else
             export BRANCH=${{ github.head_ref }}
-            export SHA=$( git rev-parse $BRANCH:$FILE_TO_COMMIT )
+            export SHA=$( git rev-parse "$BRANCH:$FILE_TO_COMMIT" )
             echo "Branch: $BRANCH"
+            echo "SHA: $SHA"
             gh api --method PUT /repos/:owner/:repo/contents/$FILE_TO_COMMIT \
               --field message="Autogenerate OpenAPI spec from TypeSpec" \
               --field content=@<( base64 -i $FILE_TO_COMMIT ) \
