--- a/.github/workflows/build-openapi.yml
+++ b/.github/workflows/build-openapi.yml
@@ -30,6 +30,5 @@ jobs:
             gh api --method PUT /repos/:owner/:repo/contents/$FILE_TO_COMMIT \
               --field message="Autogenerate OpenAPI spec from TypeSpec" \
               --field content=@<( base64 -i $FILE_TO_COMMIT ) \
-              --field branch="$BRANCH" \
-              --field sha="$SHA"
+              --field branch="$BRANCH"
           fi
