--- a/.github/workflows/build-openapi.yml
+++ b/.github/workflows/build-openapi.yml
@@ -31,4 +31,5 @@ jobs:
               --field message="Autogenerate OpenAPI spec from TypeSpec" \
               --field content=@<( base64 -i $FILE_TO_COMMIT ) \
               --field branch="$BRANCH"
+              --field sha="$SHA"
           fi
