--- a/.github/workflows/build-openapi.yml
+++ b/.github/workflows/build-openapi.yml
@@ -1,11 +1,13 @@
 name: Build OpenAPI and commit changes
 
 on:
-#  pull_request:
-#    branches:
-#      - main
-#    paths:
-#      - 'typespec/**'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'typespec/**'
+    paths-ignore:
+      - 'openapi/**'
 
 jobs:
   build-and-commit:
