--- a/.github/workflows/build-openapi.yml
+++ b/.github/workflows/build-openapi.yml
@@ -37,6 +37,8 @@ jobs:
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
+            echo "Diff:"
+            git diff --cached --quiet          
             export BRANCH=${{ github.head_ref }}
             export SHA=$( git rev-parse "$BRANCH:$FILE_TO_COMMIT" )
             echo "Branch: $BRANCH"
