--- a/.github/workflows/build-openapi.yml
+++ b/.github/workflows/build-openapi.yml
@@ -4,8 +4,8 @@ on:
   pull_request:
     branches:
       - main
-    paths-ignore:
-      - 'openapi/**'
+    paths:
+      - 'typespec/**'
 
 jobs:
   build-and-commit:
@@ -37,8 +37,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
-            echo "Diff:"
-            git diff          
             export BRANCH=${{ github.head_ref }}
             export SHA=$( git rev-parse "$BRANCH:$FILE_TO_COMMIT" )
             echo "Branch: $BRANCH"
