--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@typespec/compiler": "^0.63.0",
-    "@typespec/http": "^0.63.0",
-    "@typespec/openapi3": "^0.63.0",
-    "@typespec/rest": "^0.63.0"
+    "@typespec/compiler": "^0.64.0",
+    "@typespec/http": "^0.64.0",
+    "@typespec/openapi3": "^0.64.0",
+    "@typespec/rest": "^0.64.0",
+    "einnsyn-codegen": "file:../ein-api-codegen/typespec"
   },
   "scripts": {
     "build": "tsp compile ./typespec/einnsyn.tsp --emit=@typespec/openapi3 --output-dir ./openapi/"
