--- a/.github/workflows/dispatch-codegen.yml
+++ b/.github/workflows/dispatch-codegen.yml
@@ -1,15 +1,17 @@
-name: Dispatch codegen
+name: Dispatch Codegen
+
 on:
   workflow_dispatch: {}
-  repository_dispatch:
-    types: [codegen]
   push:
     branches: [main]
 
 jobs:
-  dispatch:
-    name: Dispatch codegen for ein-api-client-ts
+  dispatch-codegen:
     runs-on: ubuntu-latest
+
+    env:
+      commit_message: ""
+
     steps:
       - name: Fetch app installation token
         uses: tibdex/github-app-token@v2.1.0
@@ -18,23 +20,23 @@ jobs:
           app_id: ${{ secrets.EIN_CODEGEN_APP_ID }}
           private_key: ${{ secrets.EIN_CODEGEN_APP_PRIVATE_KEY }}
 
-      - name: TS Client
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          token: ${{ steps.gh-api-token.outputs.token }}
-          repository: felleslosninger/ein-api-client-ts
-          event-type: codegen
+      - name: Set commit message if triggered by a PR
+        run: |
+          if [ "${{ github.event_name }}" == "push" ] && [[ "${{ github.event.head_commit.message }}" == *"Merge pull request"* ]]; then
+            PR_NUMBER=$(echo "${{ github.event.head_commit.message }}" | grep -oP '(?<=#)\d+')
+            PR_TITLE=$(echo "${{ github.event.head_commit.message }}" | grep -oP '(?<=: ).*')
+            echo "commit_message=Triggered from ${{ github.repository }} [#${PR_NUMBER}](https://github.com/${{ github.repository }}/pull/${PR_NUMBER}) ${PR_TITLE}" >> $GITHUB_ENV
+          else
+            echo "commit_message=Triggered from ${{ github.repository }}" >> $GITHUB_ENV
+          fi
 
-      - name: Java Client
+      - name: Dispatch workflow
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ steps.gh-api-token.outputs.token }}
-          repository: felleslosninger/ein-api-client-java
-          event-type: codegen
-
-      - name: Backend
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          token: ${{ steps.gh-api-token.outputs.token }}
-          repository: felleslosninger/ein-api-experimental
-          event-type: codegen
+          repository: felleslosninger/einnsyn-codegen
+          event-type: run-codegen-all
+          client-payload: |
+            {
+              "commit_message": "${{ env.commit_message }}"
+            }
