--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
 	"version": "1.0.0",
 	"type": "module",
 	"dependencies": {
-		"@typespec/compiler": "^0.66.0",
-		"@typespec/http": "^0.66.0",
-		"@typespec/openapi": "^0.66.0",
-		"@typespec/openapi3": "^0.66.0",
-		"@typespec/rest": "^0.66.0"
+		"@typespec/compiler": "1.3.0",
+		"@typespec/http": "1.3.0",
+		"@typespec/openapi": "1.3.0",
+		"@typespec/openapi3": "1.3.0",
+		"@typespec/rest": "0.73.0"
 	},
 	"scripts": {
-		"build": "tsp compile ./typespec/einnsyn.tsp --emit=@typespec/openapi3 --output-dir ./openapi/"
+		"build": "npx tsp compile ./typespec/einnsyn.tsp --emit=@typespec/openapi3 --output-dir ./openapi/"
 	},
 	"private": true
 }
